--- a/setup.cfg
+++ b/setup.cfg
@@ -1,24 +1,30 @@
 [metadata]
 name = template
 version = 0.0.1
-author = pawngrubber
-author_email = pawngrubber@gmail.com
 description = Template of repository
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pawngrubber/template
-project_urls =
-    Bug Tracker = https://github.com/pawngrubber/template/issues
+author = pawngrubber
+author_email = pawngrubber@gmail.com
+license = GPL-3.0
+license_file = LICENSE
 classifiers =
-    Programming Language :: Python :: 3
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     License :: OSI Approved :: GNU GPLv3 License
     Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+project_urls =
+    Bug Tracker = https://github.com/pawngrubber/template/issues
 
 [options]
-package_dir =
-    = src
 packages = find:
 python_requires = >=3.8
+package_dir =
+    = src
 
 [options.packages.find]
 where = src
