--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -18,6 +18,8 @@ jobs:
 
     - name: Set up Python environment
       uses: actions/setup-python@v2
+      with:
+          python-version: 3.9
 
     - name: Install dependencies
       run: |
