--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/PyCQA/isort
-    rev: 5.9.3
+    rev: 5.10.1
     hooks:
       - id: isort
         name: isort
@@ -11,39 +11,35 @@ repos:
         args: ["--profile=black"]
 
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 22.6.0
     hooks:
       - id: black
         args:
-            - "--target-version=py37"
-            - "--target-version=py38"
-            - "--target-version=py39"
             - "--target-version=py310"
+            - "--target-version=py311"
         types: [python]
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+    rev: v1.12.1
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==21.12b0]
+        additional_dependencies: [black==22.6.0]
 
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.5.0
+    rev: 0.6.0
     hooks:
       - id: nbstripout
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.1.0
+    rev: 1.4.0
     hooks:
       - id: nbqa-isort
         args: ["--profile=black"]
       - id: nbqa-black
         args:
-            - "--target-version=py37"
-            - "--target-version=py38"
-            - "--target-version=py39"
             - "--target-version=py310"
-        additional_dependencies: [black==21.12b0]
+            - "--target-version=py311"
+        additional_dependencies: [black==22.6.0]
       - id: nbqa-flake8
 
   - repo: https://github.com/pre-commit/pygrep-hooks
@@ -60,7 +56,7 @@ repos:
         types: [text]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.3.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -86,12 +82,12 @@ repos:
         exclude: \.(html|svg)$
 
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.17.0
+    rev: v2.0.0
     hooks:
       - id: setup-cfg-fmt
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.931
+    rev: v0.971
     hooks:
     -   id: mypy
         args: []
@@ -99,7 +95,7 @@ repos:
           - numpy
 
   - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 5.0.4
     hooks:
       - id: flake8
         additional_dependencies:
