--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
-black==21.12b0; python_version>='3.9'
-identify>=1.4.20
-mypy>=0.931
+black==22.6.0; python_version>='3.10'
+identify>=2.5.3
+mypy>=0.971
 pre-commit
-pytest>=6.2.5
+pytest>=7.1.2
