--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -16,16 +16,16 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", "3.11.0-rc.1"]
       fail-fast: false
 
     steps:
 
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
           python-version: ${{ matrix.python-version }}
 
