--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,7 +4,12 @@ services:
     build:
       context: .
       target: dev
+    image: template:dev
+    container_name: template_dev_container
     volumes:
       - type: bind
         source: .
         target: /repo
+    stdin_open: true
+    tty: true
+    entrypoint: /bin/sh
