--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11.0-rc.1"]
+        python-version: ["3.10"]
       fail-fast: false
 
     steps:
