Dockerfile and docker-compose for dev and prod (#9)
* docker files

* dockerfile for real

* remove environment comment

* dev environment ready!

* update readme

* delete old instructions

* more detailed instructions

* clean up

* Update README.md

* Update README.md

* Update unittests.yaml

* on push only

Co-authored-by: Paul Terwilliger <paul.terwil@gmail.com>

--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -4,7 +4,6 @@ name: tests
 
 on:
   push:
-  pull_request:
   schedule:
     - cron:  "0 0 * * 1"
       branches: [ $default-branch ]
@@ -16,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11.0-rc.1"]
+        python-version: ["3.10"]
       fail-fast: false
 
     steps:
