--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,15 +16,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python environment
-      uses: actions/setup-python@v4
-      with:
-          python-version: "3.10"
+    - name: Build dev docker image
+      run: docker-compose -f docker-compose-dev.yml up --detach
 
-    - name: Install dependencies
+    - name: Connect to container
+      run: docker exec -it template_dev_container /bin/sh
+
+    - name: Build and install package locally
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements-dev.txt
+        python -m build
+        python -m pip install -e . --no-deps
 
-    - name: Run pre-commit before code is pushed
-      uses: pre-commit/action@v3.0.0
+    - name: Run pre-commit
+      run: pre-commit run --all-files
