--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -17,15 +17,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build dev docker image
-      run: docker-compose -f docker-compose-dev.yml up --detach
-
-    - name: Connect to container
-      run: docker exec -it template_dev_container /bin/sh
-
-    - name: Build and install package locally
-      run: |
-        python -m build
-        python -m pip install -e . --no-deps
-
-    - name: Run pre-commit
-      run: pre-commit run --all-files
+      run: docker-compose -f docker-compose-test.yml run test pre-commit run --all-files
