--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -9,36 +9,12 @@ on:
       branches: [ $default-branch ]
 
 jobs:
-  build:
-
+  pre-commit:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-      fail-fast: false
-
     steps:
 
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-          python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade build
-        python -m pip install --upgrade pytest
-        python -m pip install -r requirements.txt
-
-    - name: Build and install package locally
-      run: |
-        python -m build
-        python -m pip install -e . --no-deps
-
-    - name: Run unit tests
-      run: pytest
+    - name: Build dev docker image
+      run: docker-compose -f docker-compose-test.yml run test pytest
