--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,15 +16,5 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python environment
-      uses: actions/setup-python@v4
-      with:
-          python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements-dev.txt
-
-    - name: Run pre-commit before code is pushed
-      uses: pre-commit/action@v3.0.0
+    - name: Build dev docker image
+      run: docker-compose -f docker-compose-test.yml run test pre-commit run --all-files
