--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build dev docker image
-      run: docker-compose -f docker-compose-test.yml run test pre-commit run --all-files
+      run: docker-compose -f docker-compose-gha.yml run dev pre-commit run --all-files
