--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build dev docker image
-      run: docker-compose -f docker-compose-test.yml run test pytest
+      run: docker-compose -f docker-compose-gha.yml run dev pytest
