--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -4,7 +4,7 @@
 # We run this on GHA to catch issues in commits from contributors who haven't
 # set up pre-commit.
 
-name: pre-commit
+name: tests
 
 on: [push]
 
@@ -15,6 +15,10 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build and push
+      uses: docker/build-push-action@v2
 
     - name: Build dev docker image
       run: docker-compose -f docker-compose-gha.yml run dev pre-commit run --all-files
