--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -15,6 +15,10 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build and push
+      uses: docker/build-push-action@v2
 
     - name: Build dev docker image
       run: docker-compose -f docker-compose-gha.yml run dev pytest
