--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -19,6 +19,12 @@ jobs:
       uses: docker/setup-buildx-action@v1
     - name: Build and push
       uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: user/app:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: Build dev docker image
       run: docker-compose -f docker-compose-gha.yml run dev pytest
