--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -4,7 +4,7 @@
 # We run this on GHA to catch issues in commits from contributors who haven't
 # set up pre-commit.
 
-name: tests
+name: pre-commit
 
 on: [push]
 
@@ -15,10 +15,18 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v3
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
+
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: user/app:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
     - name: Build dev docker image
       run: docker-compose -f docker-compose-gha.yml run dev pre-commit run --all-files
