--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -1,6 +1,6 @@
 # Run python unit tests
 
-name: tests
+name: unittests
 
 on:
   push:
@@ -9,16 +9,18 @@ on:
       branches: [ $default-branch ]
 
 jobs:
-  pytest:
+  unittests:
     runs-on: ubuntu-latest
     steps:
 
     - name: Checkout code
       uses: actions/checkout@v3
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
+
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: true
