--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -1,6 +1,6 @@
 # Run python unit tests
 
-name: tests
+name: unittests
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       branches: [ $default-branch ]
 
 jobs:
-  pre-commit:
+  unittests:
     runs-on: ubuntu-latest
     steps:
 
@@ -17,4 +17,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build dev docker image
-      run: docker-compose -f docker-compose-test.yml run test pytest
+      run: docker-compose -f docker-compose-gha.yml run dev pytest
