--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,10 +81,10 @@ repos:
         args: [--markdown-linebreak-ext=md]
         exclude: \.(html|svg)$
 
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.0.0
-    hooks:
-      - id: setup-cfg-fmt
+#  - repo: https://github.com/asottile/setup-cfg-fmt
+#    rev: v2.0.0
+#    hooks:
+#      - id: setup-cfg-fmt
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.971
