--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,9 +2,11 @@
 // TODO: install the extensions on creation.
 // https://code.visualstudio.com/docs/remote/devcontainerjson-reference
 {
-  "dockerComposeFile":"docker-compose.yml",
+  // "dockerComposeFile":"docker-compose.yml",
+  "image": "template:dev",
   "workspaceFolder": "/repo",
   "service": "dev",
+  "remoteEnv": {"NODE_EXTRA_CA_CERTS": "/etc/ssl/certs/ca-certificates.crt"},
   "customizations": {
     "vscode": {
       "extensions": [
