--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -16,5 +16,5 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Build dev docker image
-      run: docker-compose -f docker-compose-gha.yml run dev pytest
+    #- name: Build dev docker image
+    #  run: docker-compose -f docker-compose-gha.yml run dev pytest
