--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -39,7 +39,7 @@ jobs:
         context: .
         target: dev
         push: true
-        tags: user/app:latest
+        tags: pawngrubber/template:gha
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
     -
