--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -12,10 +12,28 @@ jobs:
   unittests:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Checkout code
+    -
+      name: Checkout code
       uses: actions/checkout@v3
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+      name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        target: dev
+        push: true
+        tags: pawngrubber/template:registry_cache
+        cache-from: type=registry,ref=pawngrubber/template:buildcache
+        cache-to: type=registry,ref=pawngrubber/template:buildcache,mode=max
 
     #- name: Build dev docker image
     #  run: docker-compose -f docker-compose-gha.yml run dev pytest
-    #
