--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -19,14 +19,6 @@ jobs:
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     -
-      name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-    -
       name: Login to DockerHub
       uses: docker/login-action@v2
       with:
@@ -38,18 +30,10 @@ jobs:
       with:
         context: .
         target: dev
-        push: true
+        push: false
         tags: pawngrubber/template:gha
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-    -
-      # Temp fix
-      # https://github.com/docker/build-push-action/issues/252
-      # https://github.com/moby/buildkit/issues/1896
-      name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        cache-from: type=registry,ref=pawngrubber/template:buildcache
+        cache-to: type=registry,ref=pawngrubber/template:buildcache,mode=max
 
     #- name: Build dev docker image
     #  run: docker-compose -f docker-compose-gha.yml run dev pre-commit run --all-files
