--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -31,9 +31,10 @@ jobs:
         context: .
         target: dev
         push: false
-        tags: pawngrubber/template:gha
+        tags: template:gha
         cache-from: type=registry,ref=pawngrubber/template:buildcache
         cache-to: type=registry,ref=pawngrubber/template:buildcache,mode=max
     -
       name: Run tests
-      run: docker-compose -f docker-compose-gha.yml run dev pytest
+      run: docker run template:gha pytest
+      #run: docker-compose -f docker-compose-gha.yml run dev pytest
