--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -18,6 +18,8 @@ jobs:
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+      with:
+        driver: docker
     -
       name: Login to DockerHub
       uses: docker/login-action@v2
