--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -18,12 +18,11 @@ jobs:
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      with:
-        driver: docker
     -
       name: Login to DockerHub
       uses: docker/login-action@v2
       with:
+        load: true
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
