--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -34,10 +34,24 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/template:gha
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/template:buildcache
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/template:buildcache,mode=max
+        outputs: type=docker,dest=/tmp/myimage.tar
+    -
+      name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: myimage
+        path: /tmp/myimage.tar
+    -
+      name: Download artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: myimage
+        path: /tmp
+    -
+      name: Load image
+      run: |
+        docker load --input /tmp/myimage.tar
+        docker image ls -a
     -
       name: Run tests
-      #run: docker run ${{ secrets.DOCKERHUB_USERNAME }}/template:gha pytest
-      run: docker pull pawngrubber/template:buildcache
-    -
-      name: tests
-      run: docker-compose -f docker-compose-gha.yml run dev pytest
+      run: docker run ${{ secrets.DOCKERHUB_USERNAME }}/template:gha pytest
