--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,9 +12,29 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Checkout code
+    -
+      name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Build dev docker image
-      run: docker-compose -f docker-compose-gha.yml run dev pre-commit run --all-files
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+      name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        target: dev
+        push: false
+        tags: ${{ secrets.REPO_NAME }}:gha
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:cache
+        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:cache,mode=max
+        outputs: type=docker
+    -
+      name: Run tests
+      run: docker run ${{ secrets.REPO_NAME }}:gha pre-commit run --all-files
