--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,28 +17,25 @@ jobs:
       name: Checkout code
       uses: actions/checkout@v3
     -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    -
-      name: Login to DockerHub
-      uses: docker/login-action@v2
+      name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        python-version: "3.10"
     -
-      name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        target: dev
-        push: false
-        tags: ${{ secrets.REPO_NAME }}:gha
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:cache
-        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:cache,mode=max
-        outputs: type=docker
+      name: Install requirements
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade build
+        python -m pip install -r requirements/prod.txt
+        python -m pip install -r requirements/dev.txt
+    -
+      name: Build
+      run: |
+        python -m build
+        python -m pip install -e . --no-deps
     -
       name: Unit tests
-      run: docker run ${{ secrets.REPO_NAME }}:gha pytest
+      run: pytest
     -
       name: Style tests
-      run: docker run ${{ secrets.REPO_NAME }}:gha pre-commit run --all-files
+      run: pre-commit run --all-files
