--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,7 +91,7 @@ repos:
     rev: v0.982
     hooks:
     -   id: mypy
-        args: []
+        args: [--show-error-codes]
         additional_dependencies:
           - numpy
 
