--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -88,10 +88,10 @@ repos:
 #      - id: setup-cfg-fmt
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.971
+    rev: v0.982
     hooks:
     -   id: mypy
-        args: []
+        args: [--show-error-codes]
         additional_dependencies:
           - numpy
 
