--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,19 +20,15 @@ jobs:
       name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     -
-      name: Install requirements
+      name: Install Poetry
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade build
-        python -m pip install -r requirements/prod.txt
-        python -m pip install -r requirements/dev.txt
+        python -m pip install poetry
     -
-      name: Build
-      run: |
-        python -m build
-        python -m pip install -e . --no-deps
+      name: Install dependencies
+        python -m poetry install --with dev,pre-commit --with pre-commit
     -
       name: Unit tests
       run: pytest
