--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,33 @@
-[build-system]
-requires = [
-    "setuptools>=67.6.0",
-    "wheel",
+[tool.poetry]
+name = "template"
+version = "0.1.0"
+description = "Repository template for starting python projects"
+authors = ["pawngrubber <pawngrubber@gmail.com>"]
+readme = "README.md"
+packages = [
+    {include = "template_package_one", from = "src"},
+    {include = "template_package_two", from = "src"},
 ]
-build-backend = "setuptools.build_meta"
+
+[tool.poetry.dependencies]
+python = "^3.12"
+chess = "*"
+numpy = "*"
+pandas = "*"
+pyarrow = "*"
+tqdm = "*"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+identify = "*"
+mypy = "*"
+pytest = "*"
+poetry-plugin-export = "*"
+
+
+[tool.poetry.group.pre-commit.dependencies]
+pre-commit = "*"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
