--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,7 +31,7 @@ jobs:
       run: python -m poetry install --with dev,pre-commit
     -
       name: Unit tests
-      run: pytest
+      run: poetry run pytest
     -
       name: Style tests
-      run: pre-commit run --all-files
+      run: poetry run pre-commit run --all-files
