--- a/.github/workflows/docker_tests.yaml
+++ b/.github/workflows/docker_tests.yaml
@@ -15,19 +15,19 @@ jobs:
     steps:
     -
       name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     -
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
     -
       name: Login to DockerHub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
       name: Build and push
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v6
       with:
         context: .
         target: dev
@@ -38,7 +38,7 @@ jobs:
         outputs: type=docker
     -
       name: Unit tests
-      run: docker run ${{ secrets.REPO_NAME }}:gha pytest
+      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run pytest
     -
       name: Style tests
-      run: docker run ${{ secrets.REPO_NAME }}:gha pre-commit run --all-files
+      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run pre-commit run --all-files
