--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,27 +15,23 @@ jobs:
     steps:
     -
       name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     -
       name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     -
-      name: Install requirements
+      name: Install Poetry
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade build
-        python -m pip install -r requirements/prod.txt
-        python -m pip install -r requirements/dev.txt
+        python -m pip install poetry
     -
-      name: Build
-      run: |
-        python -m build
-        python -m pip install -e . --no-deps
+      name: Install dependencies
+      run: python -m poetry install --with dev,pre-commit
     -
       name: Unit tests
-      run: pytest
+      run: poetry run pytest
     -
       name: Style tests
-      run: pre-commit run --all-files
+      run: poetry run pre-commit run --all-files
