--- a/.github/workflows/docker_tests.yaml
+++ b/.github/workflows/docker_tests.yaml
@@ -37,8 +37,14 @@ jobs:
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:cache,mode=max
         outputs: type=docker
     -
-      name: Unit tests
+      name: `pytest`
       run: docker run ${{ secrets.REPO_NAME }}:gha poetry run pytest
     -
-      name: Style tests
-      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run pre-commit run --all-files
+      name: `mypy`
+      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run mypy .
+    -
+      name: `ruff format`
+      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run ruff format
+    -
+      name: `ruff check`
+      run: docker run ${{ secrets.REPO_NAME }}:gha poetry run ruff check
