--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,57 @@ pyarrow = "*"
 tqdm = "*"
 
 [tool.poetry.group.dev.dependencies]
-black = "*"
-identify = "*"
+ruff = "*"
 mypy = "*"
 pytest = "*"
 poetry-plugin-export = "*"
 
-
-[tool.poetry.group.pre-commit.dependencies]
-pre-commit = "*"
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+warn_unused_configs = true
+
+ignore_missing_imports = true
+
+disallow_any_unimported = true
+
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_return_any = true
+warn_unreachable = true
+
+strict_equality = true
+
+show_column_numbers = true
+
+pretty = true
+
+local_partial_types = true
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+
+[tool.ruff.lint]
+extend-select = [
+    'B',
+    'C4',
+    'ISC',
+    'A',
+    'N',
+    'I',
+    'PGH',
+]
+ignore = [
+    "E402",
+    "ISC001",
+]
+
+[tool.ruff.format]
+quote-style = "double"
