--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,7 +22,7 @@ jobs:
       with:
         python-version: "3.12"
     -
-      name: Install `poetry`
+      name: Install poetry
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
@@ -30,14 +30,14 @@ jobs:
       name: Install
       run: python -m poetry install --with dev
     -
-      name: `pytest`
+      name: pytest
       run: poetry run pytest
     - 
-      name: `mypy`
+      name: mypy
       run: poetry run mypy .
     - 
-      name: `ruff format`
+      name: ruff format
       run: poetry run ruff format
     - 
-      name: `ruff check`
+      name: ruff check
       run: poetry run ruff check
