--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,16 +22,22 @@ jobs:
       with:
         python-version: "3.12"
     -
-      name: Install Poetry
+      name: Install poetry
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
     -
-      name: Install dependencies
-      run: python -m poetry install --with dev,pre-commit
+      name: Install
+      run: python -m poetry install --with dev
     -
-      name: Unit tests
+      name: pytest
       run: poetry run pytest
-    -
-      name: Style tests
-      run: poetry run pre-commit run --all-files
+    - 
+      name: mypy
+      run: poetry run mypy .
+    - 
+      name: ruff format
+      run: poetry run ruff format
+    - 
+      name: ruff check
+      run: poetry run ruff check
